--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Водонапорные башни Бородянка</title>
+    <title>Водоканал Бородянка система скважин </title>
     <link rel="stylesheet" href="css/datepicker.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/response.css">
@@ -19,7 +19,7 @@
             </button>
             <a href="/" class="logo">
                 <img src="img/logo.png" alt="Бородянка герб">
-                Водонапорные башни Бородянка
+                Водоканал Бородянка. Система скаважин
             </a>
             <div class="head-select">
                 <div class="head-select-selected">
