engine bar graph + graphs ua language

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="sidebar-close">×</div>
         <ul>
             <li class="well is-info is-compare" data-id="1">
-                <header class="well-head" style="color: #F44336;">
+                <header class="well-head" style="color: #F44336;" data-bg="rgba(244, 67, 54, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -50,7 +50,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="2">
-                <header class="well-head" style="color: #9C27B0;">
+                <header class="well-head" style="color: #9C27B0;" data-bg="rgba(156, 39, 176, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -61,7 +61,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="3">
-                <header class="well-head" style="color: #3F51B5;">
+                <header class="well-head" style="color: #3F51B5;" data-bg="rgba(63, 81, 181, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -72,7 +72,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="4">
-                <header class="well-head" style="color: #03A9F4;">
+                <header class="well-head" style="color: #03A9F4;" data-bg="rgba(3, 169, 244, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -83,7 +83,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="5">
-                <header class="well-head" style="color: #00BCD4;">
+                <header class="well-head" style="color: #00BCD4;" data-bg="rgba(0, 188, 212, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -94,7 +94,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="6">
-                <header class="well-head" style="color: #4CAF50;">
+                <header class="well-head" style="color: #4CAF50;" data-bg="rgba(76, 175, 80, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -105,7 +105,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="7">
-                <header class="well-head" style="color: #CDDC39;">
+                <header class="well-head" style="color: #CDDC39;" data-bg="rgba(205, 220, 57, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -116,7 +116,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="8">
-                <header class="well-head" style="color: #FF9800;">
+                <header class="well-head" style="color: #FF9800;" data-bg="rgba(255, 152, 0, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -127,7 +127,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="9">
-                <header class="well-head" style="color: #a58a80;">
+                <header class="well-head" style="color: #a58a80;" data-bg="rgba(165, 138, 128, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -138,7 +138,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="10">
-                <header class="well-head" style="color: #f75adc;">
+                <header class="well-head" style="color: #f75adc;" data-bg="rgba(247, 90, 220, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -171,7 +171,7 @@
                 <ul class="well-info"></ul>
             </li>
             <li class="well is-compare" data-id="13">
-                <header class="well-head" style="color: #212527;">
+                <header class="well-head" style="color: #212527;" data-bg="rgba(33, 37, 39, 0.1)">
                     <label class="checkbox">
                         <input type="checkbox" checked>
                         <i class="icon-check"></i>
@@ -477,7 +477,9 @@
     <div id="page-loader"><div class="loader">Завантаження...</div></div>
 
     <script src="js/datepicker.min.js"></script>
-    <script src="js/Chart.bundle.min.js"></script>
+    <script src="js/moment.min.js"></script>
+    <script src="js/uk.js"></script>
+    <script src="js/Chart.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
