--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="js/jquery-3.2.1.min.js"></script>
 </head>
-<body class="head-select-map">
+<body class="head-select-tables">
 
     <header class="header">
         <div class="clearfix">
@@ -23,11 +23,12 @@
             </a>
             <div class="head-select">
                 <div class="head-select-selected">
-                    <span>Мапа</span>
+                    <span>Дані</span>
                     <i class="icon-arrow-down"></i>
                 </div>
                 <ul>
-                    <li class="head-select-map active">Мапа</li>
+                    <li class="head-select-tables active">Дані</li>
+                    <li class="head-select-map">Мапа</li>
                     <li class="head-select-info">Інфо</li>
                     <li class="head-select-compare">Порівняння</li>
                 </ul>
@@ -185,6 +186,52 @@
     </div>
 
     <div class="content">
+
+        <div class="tables">
+            <div class="content-box">
+                <h3>За останню добу з 7:00 по 7:00</h3>
+                <div class="table-wrap">
+                    <table class="table" id="table-day">
+                        <thead>
+                            <tr>
+                                <th>№ Свердловини</th>
+                                <th>Вода, м<sup>3</sup></th>
+                                <th>Енергія, кВт</th>
+                                <th>Ефективність, кВт/м<sup>3</sup></th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="content-box">
+                <h3>За останній тиждень, місяць, рік</h3>
+                <div class="table-wrap">
+                    <table class="table" id="table-summary">
+                        <thead>
+                            <tr>
+                                <th rowspan="2">№ Свердловини</th>
+                                <th colspan="3">Тиждень</th>
+                                <th colspan="3">Місяць</th>
+                                <th colspan="3">Рік</th>
+                            </tr>
+                            <tr>
+                                <th>Вода, м<sup>3</sup></th>
+                                <th>Енергія, кВт</th>
+                                <th>Ефективність, кВт/м<sup>3</sup></th>
+                                <th>Вода, м<sup>3</sup></th>
+                                <th>Енергія, кВт</th>
+                                <th>Ефективність, кВт/м<sup>3</sup></th>
+                                <th>Вода, м<sup>3</sup></th>
+                                <th>Енергія, кВт</th>
+                                <th>Ефективність, кВт/м<sup>3</sup></th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
 
         <div class="map">
             <div class="map-wrap">
