tables print + efficiency three stages + map point numbers

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
     <div class="content">
 
         <div class="tables">
+            <button type="button" class="print-btn">Роздрукувати / Зберегти</button>
             <div class="content-box">
                 <h3>За останню добу з 7:00 по 7:00</h3>
                 <div class="table-wrap">
@@ -216,15 +217,15 @@
                                 <th colspan="3">Рік</th>
                             </tr>
                             <tr>
-                                <th>Вода, м<sup>3</sup></th>
-                                <th>Енергія, кВт</th>
-                                <th>Ефективність, кВт/м<sup>3</sup></th>
-                                <th>Вода, м<sup>3</sup></th>
-                                <th>Енергія, кВт</th>
-                                <th>Ефективність, кВт/м<sup>3</sup></th>
-                                <th>Вода, м<sup>3</sup></th>
-                                <th>Енергія, кВт</th>
-                                <th>Ефективність, кВт/м<sup>3</sup></th>
+                                <th>Вода, <span>м<sup>3</sup></span></th>
+                                <th>Енергія, <span>кВт</span></th>
+                                <th>Ефективність, <span>кВт/м<sup>3</sup></span></th>
+                                <th>Вода, <span>м<sup>3</sup></span></th>
+                                <th>Енергія, <span>кВт</span></th>
+                                <th>Ефективність, <span>кВт/м<sup>3</sup></span></th>
+                                <th>Вода, <span>м<sup>3</sup></span></th>
+                                <th>Енергія, <span>кВт</span></th>
+                                <th>Ефективність, <span>кВт/м<sup>3</sup></span></th>
                             </tr>
                         </thead>
                         <tbody></tbody>
@@ -239,6 +240,7 @@
                     <div class="map-inner">
                         <img src="img/map-edited-1.jpg" alt="water stations map">
                         <div class="map-point" data-id="1">
+                            <i class="map-point-number">1</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner bottom-left">
                                 <h4>Свердловина №1</h4>
@@ -247,6 +249,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="2">
+                            <i class="map-point-number">2</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner bottom-left">
                                 <h4>Свердловина №2</h4>
@@ -255,6 +258,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="3">
+                            <i class="map-point-number">3</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner bottom-left">
                                 <h4>Свердловина №3</h4>
@@ -263,6 +267,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="4">
+                            <i class="map-point-number">4</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner top-left">
                                 <h4>Свердловина №4</h4>
@@ -271,6 +276,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="5">
+                            <i class="map-point-number">5</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner top-left">
                                 <h4>Свердловина №5</h4>
@@ -279,6 +285,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="6">
+                            <i class="map-point-number">6</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner top-left">
                                 <h4>Свердловина №6</h4>
@@ -287,6 +294,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="7">
+                            <i class="map-point-number">7</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner bottom-left">
                                 <h4>Свердловина №7</h4>
@@ -295,6 +303,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="8">
+                            <i class="map-point-number">8</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner top-left">
                                 <h4>Свердловина №8</h4>
@@ -303,6 +312,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="9">
+                            <i class="map-point-number">9</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner bottom-left">
                                 <h4>Свердловина №9</h4>
@@ -311,6 +321,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="10">
+                            <i class="map-point-number">10</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner bottom-left">
                                 <h4>Свердловина №10</h4>
@@ -319,6 +330,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="11">
+                            <i class="map-point-number">11</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner top-right">
                                 <h4>Свердловина №11</h4>
@@ -327,6 +339,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="12">
+                            <i class="map-point-number">12</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner top-right">
                                 <h4>Свердловина №12</h4>
@@ -335,6 +348,7 @@
                             </div>
                         </div>
                         <div class="map-point" data-id="13">
+                            <i class="map-point-number">13</i>
                             <img src="img/well-icon.svg" alt="well">
                             <div class="map-point-inner bottom-right">
                                 <h4>Свердловина №13</h4>
