stage error.fix in progress

--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
             <button type="button" class="print-btn">Роздрукувати / Зберегти</button>
             <div class="content-box">
                 <h3>За останню добу з 7:00 по 7:00</h3>
+
+<!-- 2 josper  -->
+<br>
+<font color=#ff0000>SERVICE MODE! ЗАЧЕКАЙТЕ! ВЕДУТЬСЯ СЕРВІСНІ РАБОТИ.<font>
+<!--  -->
+
                 <div class="table-wrap">
                     <table class="table" id="table-day">
                         <thead>
