--- a/index.html
+++ b/index.html
@@ -376,15 +376,15 @@
             <div class="period-select-container clearfix">
                 <p>Показники за період</p>
                 <div class="period-select-wrap">
-                    <div class="period-selected" data-period="1">
-                        <span>Сьогодні</span>
+                    <div class="period-selected" data-period="4">
+                        <span>30 днів</span>
                         <i class="icon-arrow-down"></i>
                     </div>
                     <div class="period-select">
-                        <button type="button" class="active" data-period="1">Сьогодні</button>
+                        <button type="button" data-period="1">Сьогодні</button>
                         <button type="button" data-period="2">Вчора</button>
                         <button type="button" data-period="3">7 днів</button>
-                        <button type="button" data-period="4">30 днів</button>
+                        <button type="button" class="active" data-period="4">30 днів</button>
                         <button type="button" data-period="5">Цей місяць</button>
                         <button type="button" data-period="6">Цей рік</button>
                         <button type="button" class="period-calendar-btn-1" data-period="7">Вибір періоду</button>
