control stage with some fixes.

--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
             <div class="content-box">
                 <h3>За останню добу з 7:00 по 7:00</h3>
 
-<!-- 2 josper  -->
+<!-- 2 josper 
 <br>
-<font color=#ff0000>SERVICE MODE! ЗАЧЕКАЙТЕ! ВЕДУТЬСЯ СЕРВІСНІ РАБОТИ.<font>
-<!--  -->
+<font color=#0000FF>SERVICE MODE!<font>
+-->
 
                 <div class="table-wrap">
                     <table class="table" id="table-day">
