--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                             <i class="map-point-number">2</i>
 <!--
 
-                            <!-- <img src="img/well-icon.svg" alt="well"> //-->
-//-->
+                            img src="img/well-icon.svg" alt="well"> //-->
+
                             <div class="map-point-inner bottom-left">
                                 <h4>Свердловина №2</h4>
                                 <button type="button" class="map-point-inner-btn">×</button>
